--- a/templates/error.html
+++ b/templates/error.html
@@ -1,10 +1,8 @@
+<?php $pageTitle = "Ошибка"; ?>
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/bootstrap/bootstrap.css" rel="stylesheet">
-    <title>Ошибкак</title>
+    <?php require_once("/head.html"); ?>
 </head>
 <body>
     <div class="container">
