--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -2,5 +2,5 @@
     <span class="navbar-brand"><?=$pageTitle?></span>
 </div>
 <ul class="nav navbar-nav">
-    <?=$navigationList?>
+    <?php require_once("/navigationMenu.html"); ?>
 </ul>
