--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/bootstrap/bootstrap.css" rel="stylesheet">
-    <title>Регистрация</title>
+    <?php require_once("/inc/head.html"); ?>
 </head>
 <body>
 <div class="container">
@@ -13,13 +10,14 @@
     </nav>
     <div class="col-sm-9">
         <form class="form-horizontal" action="register.php" method="POST">
+            <input type="hidden" name="token" value="<?=htmlspecialchars($abiturient->getToken(), ENT_QUOTES)?>">
             <?php if(!empty($errorList['name'])): ?>
                 <div class="control-group has-error">
             <?php endif ?>
                     <label class="col-sm-4 control-label" for="name">Введите имя</label>
                     <div class="col-sm-5 panel">
                         <input type="text" class="form-control" id="name" name="name"
-                               pattern="<?=$validator->getRegExpForName()?>"
+                               pattern="<?=$validator->getHTML5RegExpForName()?>"
                                title="Введите правильное имя! Допустимы русские буквы, &quot - &quot(дефис) и &quot ' &quot(апостроф)."
                                value="<?=htmlspecialchars($abiturient->getName(), ENT_QUOTES)?>"
                                maxlength="60" placeholder="Имя" required autofocus>
@@ -36,7 +34,7 @@
                     <label class="col-sm-4 control-label" for="surname">Введите фамилию</label>
                     <div class="col-sm-5 panel">
                         <input type="text" class="form-control" id="surname" name="surname"
-                               pattern="<?=$validator->getRegExpForName()?>"
+                               pattern="<?=$validator->getHTML5RegExpForName()?>"
                                title="Введите правильное имя! Допустимы русские буквы, &quot - &quot(дефис) и &quot ' &quot(апостроф)."
                                value="<?=htmlspecialchars($abiturient->getSurname(), ENT_QUOTES)?>"
                                maxlength="60" placeholder="Фамилия" required>
@@ -53,7 +51,7 @@
                     <label class="col-sm-4 control-label" for="groupNumber">Введите номер группы</label>
                     <div class="col-sm-5 panel">
                         <input type="text" class="form-control" id="groupNumber" name="groupNumber"
-                               pattern="<?=$validator->getRegExpForGroupNumber()?>"
+                               pattern="<?=$validator->getHTML5RegExpForGroupNumber()?>"
                                title="Название группы должно состоять из русских букв и цифр!"
                                value="<?=htmlspecialchars($abiturient->getGroupNumber(), ENT_QUOTES)?>"
                                maxlength="5"  placeholder="Номер группы" required>
@@ -70,7 +68,8 @@
                     <label class="col-sm-4 control-label" for="points">Введите количество баллов ЕГЭ</label>
                     <div class="col-sm-5 panel">
                         <input type="number" class="form-control" id="points" name="points" min="0" max="999"
-                               pattern="<?=$validator->getRegExpForPoints()?>"
+                               pattern="<?=$validator->getHTML5RegExpForPoints()?>"
+                               title="Количество баллов должно состоять из цифр!"
                                value="<?=htmlspecialchars($abiturient->getPoints(), ENT_QUOTES)?>"
                                placeholder="Количество баллов" required>
                     <?php if(!empty($errorList['points'])): ?>
@@ -86,7 +85,8 @@
                     <label class="col-sm-4 control-label" for="email">Введите e-mail</label>
                     <div class="col-sm-5 panel">
                         <input type="text" class="form-control" id="email" name="email"
-                               pattern="<?=$validator->getRegExpForEmail()?>"
+                               pattern="<?=$validator->getHTML5RegExpForEmail()?>"
+                               title="Введите правильно email! Пример: test@test.ru"
                                value="<?=htmlspecialchars($abiturient->getEmail(), ENT_QUOTES)?>"
                                placeholder="Электронный ящик" required>
                     <?php if(!empty($errorList['email'])): ?>
@@ -102,7 +102,8 @@
                 <label class="col-sm-4 control-label" for="year">Введите год рождения</label>
                 <div class="col-sm-5 panel">
                     <input type="number" class="form-control" id="year" name="year" min="1901" max="2003"
-                           pattern="<?=$validator->getRegExpForYear()?>"
+                           pattern="<?=$validator->getHTML5RegExpForYear()?>"
+                           title="Введите правильно год рождения! Пример: 2000"
                            value="<?=htmlspecialchars($abiturient->getYear(), ENT_QUOTES)?>"
                            placeholder="Год рождения" required>
                 <?php if(!empty($errorList['year'])): ?>
