--- a/templates/error.html
+++ b/templates/error.html
@@ -1,8 +1,7 @@
-<?php $pageTitle = "Ошибка"; ?>
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <?php require_once("/head.html"); ?>
+    <?php require_once("inc/head.html"); ?>
 </head>
 <body>
     <div class="container">
