--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <?php require_once("inc/head.html"); ?>
+    <?php require_once __DIR__ . "/inc/head.html"; ?>
 </head>
 <body>
     <div class="container">
