--- a/templates/inc/head.html
+++ b/templates/inc/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <link href="../bootstrap/bootstrap.css" rel="stylesheet">
+    <link href="./bootstrap/bootstrap.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <title><?=$pageTitle?></title>
 </head>
